--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,9 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Create your first NFT Collection.</title>
-    <meta name="title" content="Create your first NFT Collection." />
-    <meta name="description" content="Solidity + React + Alchemy + Vercel 👉 オリジナルのNFTコレクションを作ろう💫" />
+    <title>PAPPYを捕まえよう</title>
+    <meta name="title" content="Capture PAPPY" />
+    <meta name="description" content="多分１００枚位mintすれば出ると思います。" />
 
     <!-- Facebook -->
     <meta property="og:type" content="website">
